# Sora2_API

./: .env.example  .gitignore  API_DOCUMENTATION.md  Dockerfile  README.md  pyproject.toml
app/: config.py  main.py
app/api/: router.py
app/schemas/: video.py
app/services/: video_gen.py
app/utils/: logger.py
tests/: bytedance.py  openai.py
